# foundation-rs

./: .clang-format  .gitignore  Cargo.toml  README.md  manifest.scm  notes.txt  psbt.txt  rust-toolchain.toml  shell.nix
.github/workflows/: basic-fuzzing.yaml  dependencies.yaml  ffi.yaml  lint.yaml
.reuse/: dep5
arena/: Cargo.toml
arena/src/: boxed.rs  lib.rs
bip32/: Cargo.toml
bip32/fuzz/: Cargo.toml
bip32/fuzz/fuzz_targets/: derivation_path_le.rs  xpub.rs
bip32/src/: lib.rs  parser.rs
bip32/tests/: test_vectors.rs
codecs/: CHANGELOG.md  Cargo.toml
codecs/benches/: bench.rs
codecs/src/: bech32.rs  lib.rs  nostr.rs
contrib/: fuzz.sh
ffi/: Cargo.toml  Justfile  cbindgen.toml
ffi/include/: foundation.h
ffi/integration/: CMakeLists.txt  codecs.cpp
ffi/src/: codecs.rs  lib.rs
firmware/: Cargo.toml
firmware/src/: lib.rs
firmware/tests/: test-vectors.rs
nom-embedded-storage/: Cargo.toml
nom-embedded-storage/src/: lib.rs  rc.rs
psbt/: Cargo.toml
psbt/examples/: dump.rs  sign.rs  validate.rs
psbt/fuzz/: Cargo.toml
psbt/fuzz/fuzz_targets/: compact_size.rs
psbt/src/: address.rs  hash_types.rs  lib.rs  sign.rs  signing.rs  taproot.rs  transaction.rs  validation.rs
psbt/src/encoder/: compact_size.rs  hash_engine.rs  mod.rs  transaction.rs
psbt/src/parser/: compact_size.rs  global.rs  hash.rs  input.rs  keypair.rs  mod.rs  multi.rs  output.rs  secp.rs  transaction.rs
psbt/tests/: address.rs  compact_size.rs
stratum-v1/: Cargo.toml
stratum-v1/examples/: tokio-cli.rs
stratum-v1/src/: client_not.rs  client_req.rs  client_resp.rs  error.rs  fmt.rs  lib.rs
stratum-v1/src/client/: job.rs  mod.rs  notification.rs  request.rs  response.rs
test-vectors/: CHANGELOG.md  Cargo.toml  build.rs
test-vectors/data/: bcr-2020-006.json  bcr-2020-007.json  bcr-2020-008.json  bcr-2020-008.json.license  bcr-2020-009.json  bip-0032.json  bip-0032.json.license  bip-0174.json  bip-0174.json.license  bip-0370.json  bip-0370.json.license  bitcoin-transactions.json  nip-19.json  seedqr.json  seedqr.json.license
test-vectors/src/: bip32.rs  firmware.rs  lib.rs  psbt.rs
tools/: scan_qr.py
ur/: Cargo.toml
ur/fuzz/: Cargo.toml
ur/fuzz/fuzz_targets/: crypto_address_decode.rs  crypto_coininfo_decode.rs  crypto_eckey_decode.rs  crypto_hdkey_decode.rs  crypto_seed_decode.rs  model_decode.rs  solution_decode.rs  timestamp_decode.rs  uuid_decode.rs
ur/src/: len.rs  lib.rs  passport.rs  supply_chain_validation.rs  xoshiro.rs
ur/src/bytewords/: constants.rs  minicbor.rs  mod.rs
ur/src/cbor/: mod.rs  uuid.rs
ur/src/collections/: deque.rs  mod.rs  set.rs  vec.rs
ur/src/fountain/: chooser.rs  decoder.rs  encoder.rs  mod.rs  part.rs  sampler.rs  util.rs
ur/src/registry/: crypto_address.rs  crypto_coininfo.rs  crypto_eckey.rs  crypto_hdkey.rs  crypto_seed.rs  mod.rs  passport.rs
ur/src/ur/: decoder.rs  encoder.rs  mod.rs
ur/tests/: crypto_address.rs  crypto_hdkey.rs
urtypes/: Cargo.toml
urtypes/fuzz/: Cargo.toml
urtypes/fuzz/fuzz_targets/: address_decode.rs  coininfo_decode.rs  crypto_address_decode.rs  crypto_coininfo_decode.rs  crypto_eckey_decode.rs  crypto_hdkey_decode.rs  crypto_seed_decode.rs  eckey_decode.rs  hdkey_decode.rs  model_decode.rs  output_descriptor_decode.rs  seed_decode.rs  solution_decode.rs  timestamp_decode.rs  uuid_decode.rs  value_from_ur.rs
urtypes/src/: len.rs  lib.rs  passport.rs  supply_chain_validation.rs  value.rs
urtypes/src/cbor/: mod.rs  timestamp.rs  uuid.rs
urtypes/src/registry/: address.rs  coininfo.rs  crypto_address.rs  crypto_coininfo.rs  crypto_eckey.rs  crypto_hdkey.rs  crypto_keypath.rs  crypto_output.rs  crypto_seed.rs  eckey.rs  hdkey.rs  keypath.rs  mod.rs  output_descriptor.rs  passport.rs  seed.rs
urtypes/tests/: address.rs  crypto_address.rs  crypto_hdkey.rs  hdkey.rs
