# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
resolver = "2"
members = [
    "arena",
    "codecs",
    "ffi",
    "test-vectors",
    "ur",
    "urtypes",
    "urtypes/fuzz",
]

[workspace.package]
homepage = "https://github.com/Foundation-Devices/foundation-rs"

[workspace.dependencies]
arbitrary = { version = "1", features = ["derive"] }
bech32 = { version = "0.9", default-features = false }
bip39 = { version = "2", default-features = false }
bitcoin = { version = "0.31", default-features = false }
bitcoin_hashes = { version = "0.14", default-features = false }
bs58 = "0.5"
crc = "3"
criterion = { version = "0.4" }
heapless = { version = "0.8", default-features = false }
hex = { version = "0.4.2", default-features = false }
itertools = { version = "0.10", default-features = false }
libfuzzer-sys = "0.4"
minicbor = { version = "0.20", features = ["derive"] }
phf = { version = "0.11", features = ["macros"], default-features = false }
rand_xoshiro = "0.6"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", default-features = false }

# The crates in this workspace.
foundation-arena = { version = "0.1.0", path = "arena" }
foundation-codecs = { path = "codecs" }
foundation-test-vectors = { path = "test-vectors" }
foundation-urtypes = { path = "urtypes" }

[profile.release]
debug = 1
