# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
resolver = "2"
members = [
    "arena",
    "codecs",
    "ffi",
    "firmware",
    "stratum-v1",
    "test-vectors",
    "ur",
    "urtypes",
    "urtypes/fuzz",
]

[workspace.package]
homepage = "https://github.com/Foundation-Devices/foundation-rs"

[workspace.dependencies]
anyhow = { version = "1.0.83", default-features = false }
arbitrary = { version = "1", features = ["derive"] }
bech32 = { version = "0.9", default-features = false }
bip39 = { version = "2", default-features = false }
bitcoin = { version = "0.31", default-features = false }
bitcoin_hashes = { version = "0.14", default-features = false }
bs58 = "0.5"
clap = { version = "4", features = ["cargo"] }
crc = "3"
criterion = { version = "0.4" }
defmt = "0.3"
derive_more = { version = "1.0", default-features = false }
embedded-io = "0.6"
embedded-io-async = "0.6"
faster-hex = { version = "0.9", default-features = false }
heapless = { version = "0.8", default-features = false }
itertools = { version = "0.10", default-features = false }
libfuzzer-sys = "0.4"
log = { version = "0.4" }
minicbor = { version = "0.24", features = ["derive"] }
nom = { version = "7", default-features = false }
phf = { version = "0.11", features = ["macros"], default-features = false }
rand_xoshiro = "0.6"
secp256k1 = { version = "0.29", default-features = false }
serde = { version = "1.0.156", features = ["derive"], default-features = false }
serde_json = "1"
serde-json-core = { version = "0.6.0" }
uuid = { version = "1", default-features = false }

# The crates in this workspace.
foundation-arena = { version = "0.1.0", path = "arena" }
foundation-codecs = { path = "codecs" }
foundation-test-vectors = { path = "test-vectors" }
foundation-urtypes = { path = "urtypes" }

[profile.release]
debug = 1
