# SPDX-FileCopyrightText: © 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "foundation-firmware"
version = "0.1.2"
description = """Foundation Devices, Inc. Passport Firmware image parser.

This provides a command-line tool to verify the signatures of a Passport
firmware and also a `#[no_std]` library to parse the firmware images."""
homepage.workspace = true
edition = "2021"
license = "GPL-3.0-or-later AND GPL-3.0-only"

[[bin]]
name = "foundation-firmware"
required-features = ["binary"]

[features]
default = ["std", "binary"]
std = ["anyhow/std", "faster-hex?/std", "nom/std", "secp256k1/std"]
binary = ["anyhow", "clap", "faster-hex", "secp256k1/global-context", "std"]

[dependencies]
bitcoin_hashes = { workspace = true }
clap = { workspace = true, optional = true }
heapless = { workspace = true }
faster-hex = { workspace = true, optional = true }
nom = { workspace = true }
secp256k1 = { workspace = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
foundation-test-vectors = { workspace = true, features = ["firmware"] }
