# SPDX-FileCopyrightText: © 2024 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "embedded-storage-nom"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[features]
default = ["std"]
std = []

[dependencies]
embedded-storage = { workspace = true }
heapless = { workspace = true }
memchr = { workspace = true }
nom = { workspace = true }
