# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "foundation-psbt"
version = "0.1.0"
edition = "2021"

[[example]]
name = "sign"
required-features = ["sign-example"]

[dependencies]
bech32 = { workspace = true }
bs58 = { workspace = true }
bitcoin_hashes = { workspace = true }
bitcoin-primitives = { workspace = true }
bitflags = { workspace = true }
either = { workspace = true }
embedded-io = { workspace = true }
env_logger = { workspace = true, optional = true }
faster-hex = { workspace = true }
foundation-bip32 = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
nom = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
secp256k1 = { workspace = true }
tinyvec = { workspace = true }

[dev-dependencies]
foundation-test-vectors = { workspace = true, features = ["psbt"] }

[features]
default = ["std", "sign-example"]
std = ["nom/std", "secp256k1/std", "foundation-bip32/std"]
sign-example = [
    "foundation-bip32/base58ck",
    "secp256k1/global-context",
    "std",
    "env_logger",
]
