# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "foundation-test-vectors"
version = "0.1.0"
authors = ["Foundation Devices, Inc. <hello@foundationdevices.com>"]
description = "Foundation Devices test vectors for various encoding/decoding formats"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Foundation-Devices/foundation-rs"
edition = "2021"

[features]
nostr = ["hex/serde"]

[dependencies]
hex = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
