# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "foundation-test-vectors"
version = "0.1.0"
authors = ["Foundation Devices, Inc. <hello@foundationdevices.com>"]
description = "Foundation Devices test vectors for various encoding/decoding formats"
license = "GPL-3.0-or-later"
homepage = "https://github.com/Foundation-Devices/foundation-rs"
edition = "2021"

[features]
default = ["std"]
std = ["hex/std", "serde/std"]
bip32 = ["bs58", "hex/serde"]
firmware = []
nostr = ["hex/serde"]
psbt = ["hex/serde"]
seedqr = ["bip39/serde", "hex/serde"]
blockchain-commons = ["bitcoin/serde", "hex/serde"]

[dependencies]
bip39 = { workspace = true, optional = true }
bitcoin = { workspace = true, optional = true, features = ["std"] }
bs58 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
