# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "foundation-ur"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Foundation-Devices/foundation-rs"
description = "Uniform Resources"
license = "GPL-3.0-or-later"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
heapless = { workspace = true }
hex = { workspace = true }
minicbor = { workspace = true }
ur = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
minicbor = { workspace = true, features = ["alloc"] }
