# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-FileCopyrightText: © 2020 Dominik Spicher <dominikspicher@gmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "foundation-ur"
authors = [
    "Dominik Spicher <dominikspicher@gmail.com>",
    "Foundation Devices, Inc. <hello@foundationdevices.com>",
]
description = """
Implementation of Blockchain Common's Uniform Resources (UR) standard,
with static memory allocation for embedded devices while also allowing
to use dynamic memory allocation for platforms with more resources.
"""
homepage.workspace = true
version = "0.3.0"
edition = "2021"
license = "MIT"

[features]
default = ["std"]
std = ["alloc"]
alloc = ["minicbor/alloc"]

[dependencies]
bitcoin_hashes = { workspace = true }
crc = { workspace = true }
heapless = { workspace = true }
itertools = { workspace = true }
minicbor = { workspace = true }
phf = { workspace = true }
rand_xoshiro = { workspace = true }

[dev-dependencies]
faster-hex = { workspace = true, features = ["alloc"] }
