# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "foundation-urtypes"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
description = """
Uniform Resource (UR) types.

This crate provides a collection of Uniform Resources types that can
serialized and deserialized.
"""
license = "GPL-3.0-or-later"

[features]
default = ["std"]
std = ["alloc", "bitcoin/std", "minicbor/std"]
alloc = ["minicbor/alloc"]

[dependencies]
bitcoin = { workspace = true, optional = true }
foundation-arena = { workspace = true }
heapless = { workspace = true }
hex = { workspace = true }
minicbor = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
foundation-test-vectors = { workspace = true, features = ["blockchain-commons"] }
minicbor = { workspace = true, features = ["alloc"] }

[[test]]
name = "crypto_address"
path = "tests/crypto_address.rs"
required-features = ["bitcoin"]

[[test]]
name = "crypto_hdkey"
path = "tests/crypto_hdkey.rs"
required-features = ["bitcoin"]
