# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "foundation-urtypes-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { workspace = true }
foundation-arena = { workspace = true }
foundation-urtypes = { workspace = true }
libfuzzer-sys = { workspace = true }
minicbor = { workspace = true }

[[bin]]
name = "crypto_address_decode"
path = "fuzz_targets/crypto_address_decode.rs"
test = false
doc = false

[[bin]]
name = "crypto_coininfo_decode"
path = "fuzz_targets/crypto_coininfo_decode.rs"
test = false
doc = false

[[bin]]
name = "crypto_eckey_decode"
path = "fuzz_targets/crypto_eckey_decode.rs"
test = false
doc = false

[[bin]]
name = "crypto_hdkey_decode"
path = "fuzz_targets/crypto_hdkey_decode.rs"
test = false
doc = false

[[bin]]
name = "crypto_output_decode"
path = "fuzz_targets/crypto_output_decode.rs"
test = false
doc = false

[[bin]]
name = "crypto_seed_decode"
path = "fuzz_targets/crypto_seed_decode.rs"
test = false
doc = false

[[bin]]
name = "model_decode"
path = "fuzz_targets/model_decode.rs"
test = false
doc = false

[[bin]]
name = "solution_decode"
path = "fuzz_targets/solution_decode.rs"
test = false
doc = false

[[bin]]
name = "timestamp_decode"
path = "fuzz_targets/timestamp_decode.rs"
test = false
doc = false

[[bin]]
name = "uuid_decode"
path = "fuzz_targets/uuid_decode.rs"
test = false
doc = false

[[bin]]
name = "value_from_ur"
path = "fuzz_targets/value_from_ur.rs"
test = false
doc = false
