# SPDX-FileCopyrightText: © 2023 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "foundation-urtypes-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { workspace = true }
foundation-arena = { workspace = true }
foundation-urtypes = { workspace = true }
libfuzzer-sys = { workspace = true }
minicbor = { workspace = true }

[[bin]]
name = "address_decode"
path = "fuzz_targets/address_decode.rs"
test = false
doc = false

[[bin]]
name = "coininfo_decode"
path = "fuzz_targets/coininfo_decode.rs"
test = false
doc = false

[[bin]]
name = "eckey_decode"
path = "fuzz_targets/eckey_decode.rs"
test = false
doc = false

[[bin]]
name = "hdkey_decode"
path = "fuzz_targets/hdkey_decode.rs"
test = false
doc = false

[[bin]]
name = "model_decode"
path = "fuzz_targets/model_decode.rs"
test = false
doc = false

[[bin]]
name = "output_descriptor_decode"
path = "fuzz_targets/output_descriptor_decode.rs"
test = false
doc = false

[[bin]]
name = "seed_decode"
path = "fuzz_targets/seed_decode.rs"
test = false
doc = false

[[bin]]
name = "solution_decode"
path = "fuzz_targets/solution_decode.rs"
test = false
doc = false

[[bin]]
name = "timestamp_decode"
path = "fuzz_targets/timestamp_decode.rs"
test = false
doc = false

[[bin]]
name = "uuid_decode"
path = "fuzz_targets/uuid_decode.rs"
test = false
doc = false

[[bin]]
name = "value_from_ur"
path = "fuzz_targets/value_from_ur.rs"
test = false
doc = false
